# ramanujan

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/linalg/: mod.rs  vectors.rs
