[package]
name = "ramanujan"
version = "0.1.1"
edition = "2024"
description = "Provides mathematical functions, linear algebra, stats etc."
license = "MIT"
repository = "https://github.com/gagan405/ramanujan"
documentation = "https://docs.rs/ramanujan"
keywords = ["math", "statistics"]
readme = "README.md"
[dependencies]
proptest = "1.9.0"
